[gd_scene load_steps=12 format=2]

[ext_resource path="res://Autoloads/Lootlocker.gd" type="Script" id=1]
[ext_resource path="res://Assets/TitleScreen.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Silkscreen/Silkscreen-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Lootlocker" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="EnterPlayerName" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="EnterPlayerName"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="EnterPlayerName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -18.0
margin_right = 53.0
margin_bottom = 18.0
theme = SubResource( 11 )

[node name="PlayerNameLabel" type="Label" parent="EnterPlayerName/VBoxContainer"]
margin_right = 106.0
margin_bottom = 25.0
theme = SubResource( 2 )
text = "Enter Player Name
(3-15 characters)"
align = 1

[node name="LineEdit" type="LineEdit" parent="EnterPlayerName/VBoxContainer"]
margin_top = 29.0
margin_right = 106.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
max_length = 15

[node name="SubmitButton" type="Button" parent="EnterPlayerName/VBoxContainer"]
margin_top = 54.0
margin_right = 106.0
margin_bottom = 65.0
text = "Submit"

[node name="LoadingScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="LoadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Authenticating" type="Label" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -5.5
margin_right = 53.0
margin_bottom = 5.5
theme = SubResource( 2 )
text = "Authenticating..."
align = 1

[node name="Loading" type="Label" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -5.5
margin_right = 53.0
margin_bottom = 5.5
theme = SubResource( 2 )
text = "Loading..."
align = 1

[node name="GettingPlayerName" type="Label" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -5.5
margin_right = 53.0
margin_bottom = 5.5
theme = SubResource( 2 )
text = "Getting Player Name..."
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="text_changed" from="EnterPlayerName/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="mouse_entered" from="EnterPlayerName/VBoxContainer/SubmitButton" to="." method="_on_SubmitButton_mouse_entered"]
[connection signal="pressed" from="EnterPlayerName/VBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
